# roblox-discord-proxy

./: Cargo.toml
src/: discord.rs  main.rs
