[package]
name = "discord_proxy"
version = "0.0.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
serde_derive = "1.0.130"
reqwest = { version = "0.11", features = ["blocking", "json"] }