[package]
name = "discord_proxy"
version = "0.0.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["default"] }
surf = { version = "2.3.2", features = ["default"] }
serde = "1.0"
serde_derive = "1.0.130"

# [target.'cfg(target_arch = "x86_64")'.dependencies]
# tungstenite = { version = "0.9", default-features = false, features = [] }
